@@ -1,3 +1,7 @@
+* Fri Oct 12 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.3-0
+- Changed $sssd::install::package_ensure from 'latest' to 'installed'
+  - It will also respect `simp_options::package_ensure`
+
 * Tue Sep 18 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 6.1.3-0
 - Added OracleLinux to operating system check for 128 bit cipher
   work-around
